# identity.did.ipfs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
identity.did.ipfs/: addon.xml.in
identity.did.ipfs/resources/language/resource.language.en_gb/: strings.po
